--- a/apps/flujo/templates/activo/activolistar.html
+++ b/apps/flujo/templates/activo/activolistar.html
@@ -8,30 +8,24 @@
     <thead>
     <tr>
         <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+        <th scope="col">Nombre</th>
+        <th scope="col">Valor del Activo</th>
+        <th scope="col">Moneda</th>
+        <th scope="col">Tiempo</th>
+        <th scope="col">Valor de Tiempo</th>
     </tr>
     </thead>
     <tbody>
+    {% for obj in activos %}
     <tr>
         <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
+        <td>{{obj.nombre_activo}}</td>
+        <td>{{obj.valor_activo}}</td>
+        <td>{{obj.moneda}}</td>
+        <td>{{obj.tiempo}}</td>
+        <td>{{obj.valor_tiempo}}</td>
     </tr>
-    <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-    </tr>
-    <tr>
-        <th scope="row">3</th>
-        <td>Larry</td>
-        <td>the Bird</td>
-        <td>@twitter</td>
-    </tr>
+    {% endfor %}
     </tbody>
 </table>
 {%endblock%}
