--- a/apps/flujo/templates/base/base.html
+++ b/apps/flujo/templates/base/base.html
@@ -52,7 +52,7 @@
 
     </div>
 </nav>
-<div class="container">
+<div class="container" style="margin-top:2%;">
     {% block container%}
 
     {%endblock%}
