--- a/apps/flujo/templates/base/base.html
+++ b/apps/flujo/templates/base/base.html
@@ -13,6 +13,7 @@
     {%endblock%}
 </head>
 <body>
+{% if not request.user.is_anonymous  %}
 <nav class="navbar navbar-expand-lg navbar-light bg-primary">
     <a class="navbar-brand" href="#">Flujo de caja</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -23,7 +24,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <!--<a class="nav-link" href="#">{{request.user}} <span class="sr-only">(current)</span></a>-->
+                <!--<a class="nav-link" href="#">{{request.user.first_name}} <span class="sr-only">(current)</span></a>-->
+                 <a class="nav-link" href="/accounts/logout">Salir <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Mis movimiento</a>
@@ -82,6 +85,7 @@
 
     </div>
 </nav>
+{%endif%}
 <div class="container" style="margin-top:2%;">
     {% block container%}
 
