--- a/apps/flujo/templates/activo/listar_activos.html
+++ b/apps/flujo/templates/activo/listar_activos.html
@@ -2,13 +2,29 @@
 
 {% block title%} ACTIVO LISTAR {%endblock%}
 
+{% load widget_tweaks %}
+{% load staticfiles %}
+
 {% block container%}
 
 {% for message in messages %}
-    {% if message.tags %}
-            <div role="alert" class="alert alert-{{ message.tags }}"> {{ message }}</div>
-    {% endif %}
+{% if message.tags %}
+<div role="alert" class="alert alert-{{ message.tags }}"> {{ message }}</div>
+{% endif %}
 {% endfor %}
+
+<!--{{frm_filter}}-->
+
+<form method="get" enctype="multipart/form-data">
+    {% csrf_token %}
+    <div class="input-group mb-3">
+        {% render_field frm_filter.nombre_activo__icontains autocomplete='offf' class='form-control' placeholder='Ingrese un criterio de busqueda' %}
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Buscar</button>
+        </div>
+    </div>
+</form>
+
 
 <table class="table table-striped">
     <thead>
@@ -32,7 +48,7 @@
         <td>{{obj.tiempo}}</td>
         <td>{{obj.valor_tiempo}}</td>
         <td>
-            <a href="{% url 'view_activo_update' obj.id%}" class="btn btn-outline-primary">Editar</a>
+            <a href="{% url 'update_modal_activo' obj.id%}" class="btn btn-outline-primary">Editar</a>
             <a href="{% url 'view_activo_eliminar' obj.id%}" class="btn btn-outline-danger">Eliminar</a>
         </td>
     </tr>
@@ -41,43 +57,77 @@
 </table>
 
 <div class="">
-     <ul class="pagination pagination-sm">
+    <ul class="pagination pagination-sm">
         {% if page_obj.has_previous %}
-          <li class="paginate_button page-item previous" id="datatable1_previous">
-              <a href="?page={{ page_obj.previous_page_number }}" aria-controls="datatable1" data-dt-idx="0" tabindex="0" class="page-link">
-                  <<
-              </a>
-          </li>
+        <li class="paginate_button page-item previous" id="datatable1_previous">
+            <a href="?page={{ page_obj.previous_page_number }}" aria-controls="datatable1" data-dt-idx="0" tabindex="0"
+               class="page-link">
+                <<
+            </a>
+        </li>
         {% else %}
-          <li class="paginate_button page-item previous disabled">
-              <a href="#" aria-controls="datatable1" data-dt-idx="0" tabindex="0" class="page-link">
-                 <<
-              </a>
-          </li>
+        <li class="paginate_button page-item previous disabled">
+            <a href="#" aria-controls="datatable1" data-dt-idx="0" tabindex="0" class="page-link">
+                <<
+            </a>
+        </li>
         {% endif %}
-          {% for i in paginator.page_range %}
-            {% if page_obj.number == i %}
-              <li class="paginate_button page-item active">
-                  <a href="?page={{ i }}" aria-controls="datatable1" data-dt-idx="1" tabindex="0" class="page-link">{{ i }}</a>
-              </li>
-            {% else %}
-                <li class="paginate_button page-item "><a href="?page={{ i }}" class="page-link">{{ i }}</a></li>
-            {% endif %}
-          {% endfor %}
-          {% if page_obj.has_next %}
-          <li class="paginate_button page-item next" id="datatable1_next">
-              <a href="?page={{ page_obj.next_page_number }}" aria-controls="datatable1" data-dt-idx="7" tabindex="0" class="page-link">
-                  >>
-              </a>
-          </li>
-           {% else %}
-              <li class="paginate_button page-item next disabled">
-                  <a href="#" aria-controls="datatable1" data-dt-idx="7" tabindex="0" class="page-link">
-                  >>
-              </a>
-              </li>
-           {% endif %}
-      </ul>
+        {% for i in paginator.page_range %}
+        {% if page_obj.number == i %}
+        <li class="paginate_button page-item active">
+            <a href="?page={{ i }}" aria-controls="datatable1" data-dt-idx="1" tabindex="0" class="page-link">{{ i
+                }}</a>
+        </li>
+        {% else %}
+        <li class="paginate_button page-item "><a href="?page={{ i }}" class="page-link">{{ i }}</a></li>
+        {% endif %}
+        {% endfor %}
+        {% if page_obj.has_next %}
+        <li class="paginate_button page-item next" id="datatable1_next">
+            <a href="?page={{ page_obj.next_page_number }}" aria-controls="datatable1" data-dt-idx="7" tabindex="0"
+               class="page-link">
+                >>
+            </a>
+        </li>
+        {% else %}
+        <li class="paginate_button page-item next disabled">
+            <a href="#" aria-controls="datatable1" data-dt-idx="7" tabindex="0" class="page-link">
+                >>
+            </a>
+        </li>
+        {% endif %}
+    </ul>
 </div>
 
+<div id="id_eliminar" class="modal" tabindex="-1" role="dialog">
+    <form method="post" action="{%if frm_activo.instance.id %}{% url 'view_activo_update' frm_activo.instance.id %}{%endif%}"
+          enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    {{frm_activo}}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
 {%endblock%}
+
+{% block js%}
+<script>
+    {% if frm_activo.instance.id > 0 %}
+    $('#id_eliminar').modal('show')
+    {%endif%}
+</script>
+{% endblock %}
